# YouTubeMusicDownloader

./: .gitignore  LICENSE  README.md  YouTubeMusicDownloader.ipynb  main.py  pyproject.toml
audio_metadata_editor/: __init__.py  metadata.py  spotify_api.py  youtube_audio_downloader.py
tests/: SpotifyApiResponse.json  __init__.py  test_audio_1.m4a  test_auth_0.json  test_auth_1.json  test_metadata.py  test_metadata_1.json  test_metadata_2.json  test_spotify_api.py
